Archive/6a6cb76221a3e44fd2ba9ba603fe245a-8a198f2201fdad384733f7124c65aa0e/output
main.cpp: In function 'int sanity(int, unsigned int)':
main.cpp:12:40: error: invalid cast from type 'int' to type 'unsigned int'
     return reinterpret_cast<unsigned>(p) % size;
                                        ^
